<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Dialer</string>
    <string name="app_launcher_name">Dialer</string>
    <string name="default_phone_app_prompt">Please make this app the default Phone app</string>

    <!-- Contacts -->
    <string name="could_not_access_contacts">Could not access your contacts</string>

    <!-- Recents -->
    <string name="no_previous_calls">No previous calls have been found</string>
    <string name="could_not_access_the_call_history">Could not access the call history</string>
    <string name="request_access">Request access</string>
    <string name="remove_confirmation">Are you sure you want to remove the selected items from the Call History?</string>
    <string name="clear_history_confirmation">Are you sure you want to remove everything from the Call History?</string>
    <string name="send_sms">Send SMS</string>
    <string name="show_grouped_calls">Show grouped calls</string>
    <string name="clear_call_history">Clear call history</string>
    <string name="show_call_details">Show call details</string>

    <!-- Dialpad -->
    <string name="dialpad">Dialpad</string>
    <string name="asterisk">Asterisk</string>
    <string name="hashtag">Hashtag</string>
    <string name="call_number">Call number</string>

    <!-- Dialer -->
    <string name="dialer">Dialer</string>
    <string name="accept">Accept</string>
    <string name="accept_call">Accept call</string>
    <string name="decline">Decline</string>
    <string name="decline_call">Decline call</string>
    <string name="unknown_caller">Unknown Caller</string>
    <string name="is_calling">Is Calling…</string>
    <string name="dialing">Dialing…</string>
    <string name="call_ended">Call Ended</string>
    <string name="call_ending">Call Ending</string>
    <string name="ongoing_call">Ongoing Call</string>
    <string name="select_sim">Select a SIM for this call</string>
    <string name="always_use_this_sim">Always use this SIM for this number</string>
    <string name="unset_default_sim">Unset default SIM</string>
    <string name="calls">Calls</string>
    <string name="turn_microphone_on">Turn microphone on</string>
    <string name="turn_microphone_off">Turn microphone off</string>
    <string name="turn_speaker_on">Turn speaker on</string>
    <string name="turn_speaker_off">Turn speaker off</string>
    <string name="show_dialpad">Show dialpad</string>
    <string name="hide_dialpad">Hide dialpad</string>
    <string name="end_call">End call</string>

    <!-- Speed dial -->
    <string name="speed_dial">Speed dial</string>
    <string name="manage_speed_dial">Manage speed dial</string>
    <string name="speed_dial_label">Click on a number to assign a contact to it. You can then quickly call the given contact by long pressing the given number at the dialer.</string>

    <!-- Settings -->
    <string name="group_subsequent_calls">Group subsequent calls with the same number at the call log</string>
    <string name="open_dialpad_by_default" tools:ignore="MissingTranslation">Open the dialpad by default when the app opens</string>
    <string name="disable_proximity_sensor">Disable proximity sensor during calls</string>

    <!-- Goodwy -->
</resources>
